--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -31,9 +31,9 @@
 				<a href="#about">
                                         About
                                 </a>
-				<a href="#latest news">
-                                        Latest news
-                                </a>
+				<a href="#latest_news">
+					Latest news
+				</a>
 				<a href="#testimonials">
                                         Testimonials
                                 </a>
